tests/baselines/reference/implicitAnyGenericTypeInference.errors.txt
==== tests/cases/compiler/implicitAnyGenericTypeInference.ts (2 errors) ====
    
    interface Comparer<T> {
        compareTo<U>(x: T, y: U): U;
    }
    
    var c: Comparer<any>;
    c = { compareTo: (x, y) => { return y; } };
                      ~
!!! error TS7012: Parameter 'x' of lambda function implicitly has an 'any' type.
                         ~
!!! error TS7012: Parameter 'y' of lambda function implicitly has an 'any' type.
    var r = c.compareTo(1, '');